// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metric trends Automation add-on useAutomatedInteractionTrend should create automation filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "AutomationBillingEvent.createdDate",
      "operator": "inDateRange",
      "values": [
        "2021-05-29T00:00:00.000",
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "AutomationBillingEvent.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "AutomationBillingEvent.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
  ],
  "measures": [
    "AutomationBillingEvent.automatedInteractions",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends Automation add-on useAutomationRateTrend should create automation filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "AutomationBillingEvent.createdDate",
      "operator": "inDateRange",
      "values": [
        "2021-05-29T00:00:00.000",
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "AutomationBillingEvent.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "AutomationBillingEvent.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
  ],
  "measures": [
    "AutomationBillingEvent.automationRate",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends Automation add-on useFirstResponseTimeWithAutomationTrend should create automation filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "AutomationBillingEvent.createdDate",
      "operator": "inDateRange",
      "values": [
        "2021-05-29T00:00:00.000",
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "AutomationBillingEvent.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "AutomationBillingEvent.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
  ],
  "measures": [
    "AutomationBillingEvent.firstResponseTimeWithAutomation",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends Automation add-on useOverallTimeSavedWithAutomationTrend should create automation filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "AutomationBillingEvent.createdDate",
      "operator": "inDateRange",
      "values": [
        "2021-05-29T00:00:00.000",
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "AutomationBillingEvent.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "AutomationBillingEvent.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
  ],
  "measures": [
    "AutomationBillingEvent.overallTimeSaved",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends Automation add-on useResolutionTimeWithAutomationTrend should create automation filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "AutomationBillingEvent.createdDate",
      "operator": "inDateRange",
      "values": [
        "2021-05-29T00:00:00.000",
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "AutomationBillingEvent.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "AutomationBillingEvent.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
  ],
  "measures": [
    "AutomationBillingEvent.resolutionTimeWithAutomation",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends useClosedTicketsTrend should create reporting filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "Ticket.isTrashed",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "Ticket.isSpam",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "Ticket.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "Ticket.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "TicketMessages.integration",
      "operator": "equals",
      "values": [
        "1",
      ],
    },
    {
      "member": "Ticket.channel",
      "operator": "equals",
      "values": [
        "email",
        "chat",
      ],
    },
    {
      "member": "Ticket.assigneeUserId",
      "operator": "equals",
      "values": [
        "2",
      ],
    },
    {
      "member": "Ticket.tags",
      "operator": "equals",
      "values": [
        "1",
        "2",
      ],
    },
  ],
  "measures": [
    "Ticket.ticketCount",
  ],
  "segments": [
    "Ticket.closedTickets",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends useCustomerSatisfactionTrend should create reporting filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "Ticket.isTrashed",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "Ticket.isSpam",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "Ticket.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "Ticket.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "TicketMessages.integration",
      "operator": "equals",
      "values": [
        "1",
      ],
    },
    {
      "member": "Ticket.channel",
      "operator": "equals",
      "values": [
        "email",
        "chat",
      ],
    },
    {
      "member": "Ticket.assigneeUserId",
      "operator": "equals",
      "values": [
        "2",
      ],
    },
    {
      "member": "Ticket.tags",
      "operator": "equals",
      "values": [
        "1",
        "2",
      ],
    },
  ],
  "measures": [
    "TicketSatisfactionSurvey.avgSurveyScore",
  ],
  "segments": [
    "TicketSatisfactionSurvey.surveyScored",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends useMedianFirstResponseTimeTrend should create reporting filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "Ticket.isTrashed",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "Ticket.isSpam",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "TicketMessages.firstHelpdeskMessageDatetime",
      "operator": "inDateRange",
      "values": [
        "2021-05-29T00:00:00.000",
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "TicketMessages.firstHelpdeskMessageUserId",
      "operator": "equals",
      "values": [
        "2",
      ],
    },
    {
      "member": "Ticket.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "Ticket.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "TicketMessages.integration",
      "operator": "equals",
      "values": [
        "1",
      ],
    },
    {
      "member": "Ticket.channel",
      "operator": "equals",
      "values": [
        "email",
        "chat",
      ],
    },
    {
      "member": "Ticket.tags",
      "operator": "equals",
      "values": [
        "1",
        "2",
      ],
    },
  ],
  "measures": [
    "TicketMessages.medianFirstResponseTime",
  ],
  "segments": [
    "TicketMessages.conversationStarted",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends useMedianResolutionTimeTrend should create reporting filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "Ticket.isTrashed",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "Ticket.isSpam",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "Ticket.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "Ticket.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "TicketMessages.integration",
      "operator": "equals",
      "values": [
        "1",
      ],
    },
    {
      "member": "Ticket.channel",
      "operator": "equals",
      "values": [
        "email",
        "chat",
      ],
    },
    {
      "member": "Ticket.assigneeUserId",
      "operator": "equals",
      "values": [
        "2",
      ],
    },
    {
      "member": "Ticket.tags",
      "operator": "equals",
      "values": [
        "1",
        "2",
      ],
    },
  ],
  "measures": [
    "TicketMessages.medianResolutionTime",
  ],
  "segments": [
    "Ticket.closedTickets",
    "TicketMessages.conversationStarted",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends useTicketsCreatedTrend should create reporting filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "Ticket.createdDatetime",
      "operator": "inDateRange",
      "values": [
        "2021-05-29T00:00:00.000",
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "Ticket.isTrashed",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "Ticket.isSpam",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "TicketMessages.firstHelpdeskMessageUserId",
      "operator": "equals",
      "values": [
        "2",
      ],
    },
    {
      "member": "TicketMessages.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00+02:00",
      ],
    },
    {
      "member": "Ticket.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "Ticket.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "TicketMessages.integration",
      "operator": "equals",
      "values": [
        "1",
      ],
    },
    {
      "member": "Ticket.channel",
      "operator": "equals",
      "values": [
        "email",
        "chat",
      ],
    },
    {
      "member": "Ticket.tags",
      "operator": "equals",
      "values": [
        "1",
        "2",
      ],
    },
  ],
  "measures": [
    "Ticket.ticketCount",
  ],
  "segments": [
    "TicketMessages.ticketCreatedByAgent",
  ],
  "timezone": "UTC",
}
`;
